--- a/Menus/funcionarioFuncoes/MenuListarProdutos.form
+++ b/Menus/funcionarioFuncoes/MenuListarProdutos.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menus.funcionarioFuncoes.MenuListarProdutos">
-  <grid id="27dc6" binding="PainelP" layout-manager="GridLayoutManager" row-count="4" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
+  <grid id="27dc6" binding="PainelP" layout-manager="GridLayoutManager" row-count="3" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="13" y="18" width="863" height="416"/>
@@ -18,14 +18,14 @@
     <children>
       <scrollpane id="f8d41" binding="scrollpane2">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="67" height="146"/>
           </grid>
         </constraints>
         <properties>
           <verticalScrollBarPolicy value="22"/>
         </properties>
-        <border type="none" title="Produtos" title-justification="2"/>
+        <border type="none" title="&lt;html&gt;Produtos&lt;/html&gt;" title-justification="2"/>
         <children>
           <component id="9ae6" class="javax.swing.JList" binding="listProds">
             <constraints/>
@@ -35,57 +35,23 @@
           </component>
         </children>
       </scrollpane>
-      <scrollpane id="82ee5" binding="scrollpane1">
-        <constraints>
-          <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="67" height="146"/>
-          </grid>
-        </constraints>
-        <properties>
-          <name value=""/>
-        </properties>
-        <border type="none" title="Informações" title-justification="2"/>
-        <children>
-          <component id="21d6a" class="javax.swing.JLabel" binding="infoPane">
-            <constraints/>
-            <properties>
-              <font size="12"/>
-              <horizontalAlignment value="0"/>
-              <horizontalTextPosition value="2"/>
-              <name value=""/>
-              <text value=""/>
-              <toolTipText value=""/>
-              <verifyInputWhenFocusTarget value="true"/>
-              <verticalAlignment value="1"/>
-              <verticalTextPosition value="1"/>
-            </properties>
-          </component>
-        </children>
-      </scrollpane>
       <vspacer id="650c7">
         <constraints>
-          <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="30" height="-1"/>
-          </grid>
-        </constraints>
-      </vspacer>
-      <vspacer id="9ad59">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="30" height="-1"/>
+          <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="70" height="-1"/>
           </grid>
         </constraints>
       </vspacer>
       <hspacer id="80ab3">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="7" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="6" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="-1" height="30"/>
           </grid>
         </constraints>
       </hspacer>
       <component id="6d0b9" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
         <constraints>
-          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <inheritsPopupMenu value="false"/>
@@ -95,41 +61,67 @@
             <item value="Cosméticos"/>
             <item value="Higiênicos"/>
           </model>
-          <toolTipText value="Tipo do produto"/>
-        </properties>
-      </component>
-      <component id="c2a8a" class="javax.swing.JTextField" binding="pesquisaTextField" default-binding="true">
-        <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="99383" class="javax.swing.JLabel" binding="pesquisaLabel">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Pesquisa"/>
+          <toolTipText value="&lt;html&gt; Tipos de produtos &lt;/html&gt;&#10;"/>
         </properties>
       </component>
       <vspacer id="cd294">
         <constraints>
-          <grid row="1" column="4" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+          <grid row="0" column="3" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="10" height="-1"/>
           </grid>
         </constraints>
       </vspacer>
-      <vspacer id="79ef0">
+      <component id="99383" class="javax.swing.JLabel" binding="pesquisaLabel">
         <constraints>
-          <grid row="0" column="2" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Pesquisa: "/>
+        </properties>
+      </component>
+      <vspacer id="9ad59">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="10" height="-1"/>
           </grid>
         </constraints>
       </vspacer>
+      <component id="b92db" class="javax.swing.JTextField" binding="textfield">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="67332" class="javax.swing.JButton" binding="voltarButton" default-binding="true">
+        <constraints>
+          <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Voltar"/>
+        </properties>
+      </component>
+      <scrollpane id="82ee5" binding="scrollpane1">
+        <constraints>
+          <grid row="1" column="4" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="67" height="146"/>
+          </grid>
+        </constraints>
+        <properties>
+          <name value=""/>
+        </properties>
+        <border type="none" title="&lt;html&gt;Infomações&lt;/html&gt; " title-justification="2"/>
+        <children>
+          <component id="4ae48" class="javax.swing.JLabel" binding="infoPane">
+            <constraints/>
+            <properties>
+              <text value=""/>
+              <verticalAlignment value="1"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
