--- a/Menus/funcionarioFuncoes/MenuListarProdutos.form
+++ b/Menus/funcionarioFuncoes/MenuListarProdutos.form
@@ -86,13 +86,15 @@
           </grid>
         </constraints>
       </vspacer>
-      <component id="b92db" class="javax.swing.JTextField" binding="textfield">
+      <component id="b92db" class="javax.swing.JTextField" binding="pesquisaTextField">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="67332" class="javax.swing.JButton" binding="voltarButton" default-binding="true">
         <constraints>
