Correções após dar update project sem querer e bugar meu código todo

--- a/Menus/MenuFuncionario.form
+++ b/Menus/MenuFuncionario.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menus.funcionarioFuncoes.MenuFuncionario">
-  <grid id="27dc6" binding="painelFuncionario" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Menus.MenuFuncionario">
+  <grid id="27dc6" binding="painelFuncionario" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="44" width="500" height="257"/>
+      <xy x="20" y="44" width="500" height="210"/>
     </constraints>
     <properties>
       <preferredSize width="350" height="277"/>
@@ -23,7 +23,7 @@
       </component>
       <component id="18cfc" class="javax.swing.JButton" binding="sairButton" default-binding="true">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="200" height="40"/>
             <preferred-size width="250" height="40"/>
             <maximum-size width="300" height="40"/>
@@ -57,21 +57,9 @@
           <text value="Adicionar "/>
         </properties>
       </component>
-      <component id="28d30" class="javax.swing.JButton" binding="atualizarProdutosButton" default-binding="true">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="200" height="40"/>
-            <preferred-size width="250" height="42"/>
-            <maximum-size width="300" height="40"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Atualizar Produtos"/>
-        </properties>
-      </component>
       <vspacer id="ac1b4">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
     </children>
